--- a/equipos/alaves/estadio.html
+++ b/equipos/alaves/estadio.html
@@ -32,9 +32,6 @@
                         <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="entrenador.html">Entrenador</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -53,6 +50,42 @@
             </div>
         </div>
     </nav>
+
+
+    <form id="jugadorForm" class="container mt-5">
+        <div class="mb-3">
+            <label for="nombreJugador" class="form-label">Escribe el nombre del estadio</label>
+            <input type="text" class="form-control" id="nombreJugador" style="width: 250px;" required>
+        </div>
+        <div class="mb-3">
+            <label for="urlJugador" class="form-label">Escribe la url del estadio</label>
+            <input type="text" class="form-control" id="urlJugador" style="width: 250px;" required>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Cambiar estadio</button>
+    </form>
+
+
+    <div class="container marketing">
+
+        <!-- ENTRENADOR -->
+        <h1 class="mt-5">ESTADIO</h1>
+        <hr>
+        <div class="row mt-5 d-flex justify-content-center">
+            <div class="col-lg-4 text-center">
+
+                <h2>Estadio de Mendizorroza</h2>
+                <button class="btn btn-secondary bg-primary eliminarEntrenador mt-3">Cambiar estadio</button>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+
+        <div class="d-flex  justify-content-center mt-5">
+            <img src="imgAlaves/estadioAlaves.jpg" alt="" class="rounded-4" style="width: 100%;">
+        </div>
+
+
+        ddd
     
 </body>
 
