--- a/equipos/alaves/partidosJugados.html
+++ b/equipos/alaves/partidosJugados.html
@@ -32,9 +32,6 @@
                         <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="entrenador.html">Entrenador</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -53,6 +50,260 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="container marketing">
+
+        <!-- ENTRENADOR -->
+        <h1 class="mt-5">ENTRENADOR</h1>
+        <hr>
+        <div class="row mt-5 d-flex justify-content-center">
+
+            <div class="col-lg-4 text-center">
+                <img class="rounded-circle" width="140" height="140">
+                </img>
+
+                <h2>Luis Garcia Plaza</h2>
+                <h5>25</h5>
+                <button class="btn btn-secondary bg-primary eliminarEntrenador">Eliminar entrenador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+
+        </div><!-- /.row -->
+
+
+        <!-- PORTEROS -->
+
+        <h1 class="mt-5">PORTEROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center">
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                </img>
+
+                <h2>Antonio Sivera</h2>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                </img>
+
+                <h2>Jesús Owono</h2>
+                <h5>Portero</h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+
+        <!-- DEFENSAS -->
+
+        <h1 class="mt-5">DEFENSAS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center" id="defensa">
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                </img>
+
+                <h2>Andoni Gorosabel</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                </img>
+
+                <h2>Rubén Duarte</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                </img>
+
+                <h2>Aleksandar Sedlar</h2>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- DEFENSAS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                </img>
+
+                <h2>Nahuel Tenaglia</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                </img>
+
+                <h2>Rafa Marín</h2>
+                <h5>Defensa central</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                </img>
+
+                <h2>Joseda Álconstez</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/javiLopez.png">
+                </img>
+
+                <h2>Javi Lopez</h2>
+                <h5>Lateral</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+        </div><!-- /.row -->
+
+
+
+
+        <h1 class="mt-5">MEDIOCENTROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center" id="mediocentros">
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                </img>
+
+                <h2>Ander Guevara</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                </img>
+
+                <h2>Antonio Blanco</h2>
+                <h5>Mediocentro defensivo</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                </img>
+
+                <h2>Ianis Hagi</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- MEDIOCENTROS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                </img>
+
+                <h2>Jon Guridi</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                </img>
+
+                <h2>Carlos Benavídez</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+        </div><!-- /.row -->
+
+
+
+        <!-- DELANTEROS -->
+
+        <h1 class="mt-5">DELANTEROS</h1>
+        <hr class="mb-5">
+
+
+        <div class="row text-center" id="delantero">
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                </img>
+
+                <h2>Luis Rioja</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                </img>
+
+                <h2>Kike García</h2>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                </img>
+
+                <h2>Xeber Alkain</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <!-- DELANTEROS CON MARGEN -->
+
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                </img>
+
+                <h2>Abde Rebbach</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
+                </img>
+
+                <h2>Carlos Vicente</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
+                </img>
+
+                <h2>Unai Ropero</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+
+
+    </div>
     
 </body>
 
