--- a/equipos/alaves/alaves.html
+++ b/equipos/alaves/alaves.html
@@ -85,7 +85,7 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorAlaves.png">
                 </img>
 
                 <h2>Luis Garcia Plaza</h2>
