--- a/equipos/alaves/partidosJugados.html
+++ b/equipos/alaves/partidosJugados.html
@@ -60,12 +60,12 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorAlaves.png"> 
                 </img>
 
                 <h2>Luis Garcia Plaza</h2>
-                <h5>25</h5>
-                <button class="btn btn-secondary bg-primary eliminarEntrenador">Eliminar entrenador</button>
+                <h5>244 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarEntrenador">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -86,16 +86,16 @@
                 </img>
 
                 <h2>Antonio Sivera</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
+                <h5>233 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
                 </img>
 
                 <h2>Jesús Owono</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
+                <h5>20 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarPorteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -112,24 +112,24 @@
                 </img>
 
                 <h2>Andoni Gorosabel</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>123 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
                 </img>
 
                 <h2>Rubén Duarte</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>325 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
                 </img>
 
                 <h2>Aleksandar Sedlar</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>117 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -143,24 +143,24 @@
                 </img>
 
                 <h2>Nahuel Tenaglia</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>59 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
                 </img>
 
                 <h2>Rafa Marín</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>66 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
                 <h2>Joseda Álconstez</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>32 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -171,8 +171,8 @@
                 </img>
 
                 <h2>Javi Lopez</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
+                <h5>143 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -190,24 +190,24 @@
                 </img>
 
                 <h2>Ander Guevara</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+                <h5>126 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
                 </img>
 
                 <h2>Antonio Blanco</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+                <h5>88 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
                 </img>
 
                 <h2>Ianis Hagi</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+                <h5>100 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -221,16 +221,16 @@
                 </img>
 
                 <h2>Jon Guridi</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+                <h5>287 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
                 </img>
 
                 <h2>Carlos Benavídez</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+                <h5>132 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -249,24 +249,24 @@
                 </img>
 
                 <h2>Luis Rioja</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>228 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
                 </img>
 
                 <h2>Kike García</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>356 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
                 </img>
 
                 <h2>Xeber Alkain</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>34 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -280,24 +280,24 @@
                 </img>
 
                 <h2>Abde Rebbach</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>44 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
                 </img>
 
                 <h2>Carlos Vicente</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>34 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
                 </img>
 
                 <h2>Unai Ropero</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+                <h5>56 partidos</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
