--- a/equipos/alaves/partidosJugados.html
+++ b/equipos/alaves/partidosJugados.html
@@ -51,6 +51,10 @@
         </div>
     </nav>
 
+    <div id="formulario">
+
+    </div>
+
 
     <div class="container marketing">
 
@@ -60,12 +64,13 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorAlaves.png"> 
+                <img class="rounded-circle" width="140" height="140"
+                    src="../../entrenadores/imgEntrenadores/entrenadorAlaves.png">
                 </img>
 
                 <h2>Luis Garcia Plaza</h2>
                 <h5>244 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarEntrenador">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -87,7 +92,7 @@
 
                 <h2>Antonio Sivera</h2>
                 <h5>233 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarPorteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
@@ -95,7 +100,7 @@
 
                 <h2>Jesús Owono</h2>
                 <h5>20 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarPorteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -113,7 +118,7 @@
 
                 <h2>Andoni Gorosabel</h2>
                 <h5>123 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
@@ -121,7 +126,7 @@
 
                 <h2>Rubén Duarte</h2>
                 <h5>325 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
@@ -129,7 +134,7 @@
 
                 <h2>Aleksandar Sedlar</h2>
                 <h5>117 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -144,7 +149,7 @@
 
                 <h2>Nahuel Tenaglia</h2>
                 <h5>59 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
@@ -152,7 +157,7 @@
 
                 <h2>Rafa Marín</h2>
                 <h5>66 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
@@ -160,7 +165,7 @@
 
                 <h2>Joseda Álconstez</h2>
                 <h5>32 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -172,7 +177,7 @@
 
                 <h2>Javi Lopez</h2>
                 <h5>143 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -191,7 +196,7 @@
 
                 <h2>Ander Guevara</h2>
                 <h5>126 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
@@ -199,7 +204,7 @@
 
                 <h2>Antonio Blanco</h2>
                 <h5>88 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
@@ -207,7 +212,7 @@
 
                 <h2>Ianis Hagi</h2>
                 <h5>100 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -222,7 +227,7 @@
 
                 <h2>Jon Guridi</h2>
                 <h5>287 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
@@ -230,7 +235,7 @@
 
                 <h2>Carlos Benavídez</h2>
                 <h5>132 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarMediocentros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -250,7 +255,7 @@
 
                 <h2>Luis Rioja</h2>
                 <h5>228 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
@@ -258,7 +263,7 @@
 
                 <h2>Kike García</h2>
                 <h5>356 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
@@ -266,7 +271,7 @@
 
                 <h2>Xeber Alkain</h2>
                 <h5>34 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -281,7 +286,7 @@
 
                 <h2>Abde Rebbach</h2>
                 <h5>44 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
@@ -289,7 +294,7 @@
 
                 <h2>Carlos Vicente</h2>
                 <h5>34 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
@@ -297,14 +302,63 @@
 
                 <h2>Unai Ropero</h2>
                 <h5>56 partidos</h5>
-                <button class="btn btn-secondary bg-primary eliminarDelanteros">Cambiar numero de partidos</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
 
 
     </div>
-    
+
+    <script>
+
+        document.addEventListener('DOMContentLoaded', function (e) {
+
+
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroPartidos');
+
+            let formulario = document.getElementById('formulario');
+
+            botonCambiarPartidos.forEach(boton => {
+                boton.addEventListener('click', cambiarPartidos);
+
+            });
+
+            function cambiarPartidos(e) {
+
+                const divContenido = document.createElement('div');
+                divContenido.className = 'mt-3 mb-3 container';
+
+
+
+                divContenido.innerHTML = `
+        <label for="posicionJugador" class="form-label">Escribe la cantidad de partidos</label>
+        <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
+
+        <button type="submit" class="btn btn-primary">Cambiar partidos</button>
+        `;
+
+                formulario.appendChild(divContenido);
+
+                let nuevosPartidos = e.target.parentNode.querySelector('h5');
+                let boton = formulario.querySelector('button');
+
+                boton.addEventListener('click', cambiarNumeroPartidos)
+
+                function cambiarNumeroPartidos(e){
+                    let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
+                    nuevosPartidos.innerHTML = `
+                    ${numeroPartidosNuevo} partidos
+                    `
+                }
+
+            }
+
+        })
+
+
+    </script>
+
 </body>
 
 </html>
