--- a/equipos/alaves/partidosJugados.html
+++ b/equipos/alaves/partidosJugados.html
@@ -326,6 +326,8 @@
 
             function cambiarPartidos(e) {
 
+                formulario.innerHTML = '';
+
                 const divContenido = document.createElement('div');
                 divContenido.className = 'mt-3 mb-3 container';
 
